--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 									
 									<!-- Main Title -->
 									<div class="main_title">
-										<h3>Website Developer</h3>
+										<h3>LYLE ONLINE DATING COACHr</h3>
 										<p>Founder of <a href="https://frenify.com/" target="_blank">Frenify</a>. Professional UI/UX designer and web developer based on London. Sometimes works as a freelancer.</p>
 										<img src="img/signature.png" alt="" />
 									</div>
