--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Rewall | Home</title>
+<title>Lyle Tilley</title>
 
 <!-- Google Fonts -->
 
