--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Lyle Tilley</title>
+<title>Lyle Tilley Dating Coach</title>
 
 <!-- Google Fonts -->
 
@@ -75,7 +75,7 @@
 	
 	
 		<!-- Color Scheme -->
-		<div class="rewall_fn_color_scheme">
+		<!-- <div class="rewall_fn_color_scheme">
 			<a class="opener" href="#">
 				<img src="svg/color.svg" alt="" class="fn__svg" />
 			</a>
@@ -360,7 +360,7 @@
 					<a href="#" class="next"><img src="svg/right-arrow.svg" alt="" class="fn__svg" /></a>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- /Color Scheme -->
 		
 		
