--- a/index.html
+++ b/index.html
@@ -455,9 +455,9 @@
 									
 									<!-- Main Title -->
 									<div class="main_title">
-										<h3>LYLE ONLINE DATING COACH thanks for checking me out</h3>
-										<p>Founder of <a href="https://frenify.com/" target="_blank">Frenify</a>. Professional UI/UX designer and web developer based on London. Sometimes works as a freelancer.</p>
-										<img src="img/signature.png" alt="" />
+										<h3>LYLE TILLEY - online dating coach</h3>
+										<p>Founder of <a href="https://frenify.com/" target="_blank">Lyle Tilley online dating coach</a>. Professional UI/UX designer and web developer based on London. Sometimes works as a freelancer.</p>
+										<!-- <img src="img/signature.png" alt="" /> -->
 									</div>
 									<!-- /Main Title -->
 									
