--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		   	<div class="logo_hamb">
 			  	<div class="in">
 				 	<div class="menu_logo">
-						<a href="index.html"><img src="img/logo-light.png" alt="" /></a>
+						<a href="index.html"><img src="img/ltstudio.PNG" alt="" /></a>
 				 	</div>
 				 	<div class="hamburger hamburger--collapse-r">
 						<div class="hamburger-box">
