--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 			<div class="sidebar_in">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo.png" alt="" />
+						<img src="img/ltstudio.PNG" alt="" />
 					</a>
 				</div>
 				<div class="navigation">
