--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
 						<div class="container max880">					
 							
 							<!-- Contact Form -->
-							<form class="contact_form" action="/" method="post" autocomplete="off" data-email="frenifyteam@gmail.com">
+							<form class="contact_form" action="/" method="post" autocomplete="off" data-email="tilley_l@hotmail.com">
 								
 								<!--
 								 	Don't remove below code in avoid to work contact form properly.
@@ -1184,7 +1184,7 @@
 							<!-- Contact Info -->
 							<div class="fn_cs_contact_info">
 								<p>Address</p>
-								<h3>69 Queen St, London, United Kingdom</h3>
+								<h3>Bedford, Nova Scotia</h3>
 								<p>Phone</p>
 								<h3><a href="tel:+7068980751">(+706) 898-0751</a></h3>
 								<p><a class="fn__link" href="mailto:frenifyteam@gmail.com">frenifyteam@gmail.com</a></p>
