--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			 	<div>
 					<ul class="anchor_nav vert_menu_list">
 						<li class="current"><a href="#about">Home</a></li>
-						<li><a href="#biography">Biography</a></li>
+						<li><a href="#biography">About Me <Menu></Menu></a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#service">Services</a></li>
 						<li><a href="#customer">Customers</a></li>
@@ -389,7 +389,7 @@
 				<div class="navigation">
 					<ul class="anchor_nav">
 						<li class="current"><a href="#about">Home</a></li>
-						<li><a href="#biography">Biography</a></li>
+						<li><a href="#biography">About Me</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#service">Services</a></li>
 						<li><a href="#customer">Customers</a></li>
@@ -1136,7 +1136,7 @@
 						<div class="container max880">					
 							
 							<!-- Contact Form -->
-							<form class="contact_form" action="/" method="post" autocomplete="off" data-email="tilley_l@hotmail.com">
+							<form class="contact_form" action="POST" method="post" autocomplete="off" data-email="tilley_l@hotmail.com">
 								
 								<!--
 								 	Don't remove below code in avoid to work contact form properly.
